Fin de la mise en place des contenus html du projet

--- a/ressources/css/enigme.css
+++ b/ressources/css/enigme.css
@@ -1,6 +1,6 @@
-/* FEUILLE DE STYLE  DE LA PAGE ENIGME */
+/*  STYLE CSS  DE LA PAGE ENIGME */
 
-/* Definition des typographies et les propriétés générales  */
+/* Definition des typographies et des propriétés générales  */
 
 @font-face {
     font-family: "beyno";
