--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -69,6 +69,11 @@ body {
     background-size: cover;
 }
 
+body{
+    height: 100%;
+    overflow-x: hidden;
+}
+
 .btn-form {
     font-family: "cantarell";
     font-style: bold;
@@ -231,7 +236,7 @@ header .logo-header .logo-marvel:hover{
 .container-slides .card {
     display: flex;
     align-items: center;
-    height: 300px;
+    height: 250px;
 }
 
 .container-slides .card img {
@@ -248,10 +253,6 @@ header .logo-header .logo-marvel:hover{
     margin: 0px 30px;
 }
 
-.container-slides .card .img-active-1:hover,
-.container-slides .card .img-active-2:hover{
-    transform: scale(1.14);
-}
 .container-slides .card .decription-slide .titre-slide {
     font-size: 32px;
     margin-bottom: 10px;
@@ -267,9 +268,15 @@ header .logo-header .logo-marvel:hover{
 .container-slides .card .decription-slide a {
     color: var(--white);
     font-family: "cantarell";
-    font-size:12px;
+    font-size: 12px;
 }
 
+
+
+.container-slides .card .img-active-1:hover,
+.container-slides .card .img-active-2:hover{
+    transform: scale(1.14);
+}
 
 /* Fin section slide hero */
 
@@ -314,7 +321,7 @@ header .logo-header .logo-marvel:hover{
 
 #dob-prince .presentation .profil {
     width: 400px;
-    background-color: var(--white-primaire);
+    background-color: var(--white);
     border-radius: 10px;
     margin: auto;
     text-align: center;
@@ -469,6 +476,10 @@ footer .policies {
 .policies .link .pages ul li {
     display: block;
     margin-bottom: 10px;
+}
+
+.policies .link li:hover{
+    text-decoration: underline var(--white);
 }
 
 .policies .link .pages ul li a {
